--- a/components/ScrollVideo.module.css
+++ b/components/ScrollVideo.module.css
@@ -30,10 +30,10 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to bottom,
+    /* background: linear-gradient(to bottom,
             rgba(10, 10, 10, 0.3) 0%,
             rgba(10, 10, 10, 0.1) 50%,
-            rgba(10, 10, 10, 0.5) 100%);
+            rgba(10, 10, 10, 0.5) 100%); */
     display: flex;
     align-items: center;
     justify-content: center;
